Fixed Bases alignment

--- a/scss/flexcyon/style_settings/_style_settings.scss
+++ b/scss/flexcyon/style_settings/_style_settings.scss
@@ -831,7 +831,7 @@ settings:
     type: heading
     level: 5
     collapsed: true
-    description: Please note that Bases Cards View plus animations might not be good for performance.
+    description: Note that Bases Cards View plus animations might not be good for performance.
 
   - title: Note Animation type
     description: Configure animation type for note content
