--- a/theme.css
+++ b/theme.css
@@ -15355,7 +15355,13 @@ body {
   --flexcyon-quote-val: "This is a placeholder quote\ain the Flexcyon Theme.";
   --flexcyon-quote-credit-prefix: "-";
   --flexcyon-quote-credit: "bladeacer";
-  --flexcyon-ascii-art: " \a_______________                                       \a___  ____/__  /________  ____________  ______________ \a__  /_   __  /_  _ \\_  |/_/  ___/_  / / /  __ \\_  __ \\ \a_  __/   _  / /  __/_>  < / /__ _  /_/ // /_/ /  / / / \a/_/      /_/  \\___//_/|_| \\___/ _\\__, / \\____//_/ /_/ \a                                 /____/                \a \a \a";
+  --flexcyon-ascii-art: " \a\
+  _______________                                       \a\
+  ___  ____/__  /________  ____________  ______________ \a\
+  __  /_   __  /_  _ \\_  |/_/  ___/_  / / /  __ \\_  __ \\ \a\
+  _  __/   _  / /  __/_>  < / /__ _  /_/ // /_/ /  / / / \a\
+  /_/      /_/  \\___//_/|_| \\___/ _\\__, / \\____//_/ /_/ \a\
+                                  /____/                \a\a\a ";
 }
 body div.empty-state-action {
   font-size: 1.05rem;
@@ -16546,7 +16552,7 @@ settings:
     type: heading
     level: 5
     collapsed: true
-    description: Please note that Bases Cards View plus animations might not be good for performance.
+    description: Note that Bases Cards View plus animations might not be good for performance.
 
   - title: Note Animation type
     description: Configure animation type for note content
@@ -19199,6 +19205,9 @@ body {
   --bases-no-img-str: "No image path could be found for this file";
   --bases-border-r: 16px;
   --bases-cards-group-padding: 16px;
+  --bases-embed-padding: 4px;
+  --bases-cards-cover-background: var(--background-secondary);
+  --bases-cards-scale: 1;
   --flexcyon-bases-card-padding-top: 8px;
   --flexcyon-bases-card-padding-right: 0px;
   --flexcyon-bases-card-padding-bottom: 0px;
@@ -19211,13 +19220,12 @@ body {
   --flexcyon-input-horiz-padding: 8px;
   --input-padding: var(--flexcyon-input-verti-padding)
     var(--flexcyon-input-horiz-padding);
-  --bases-cards-cover-background: var(--background-secondary);
   --flexcyon-bases-card-flex-grow: 0.55;
   --flexcyon-bases-card-delay-factor: 12.5;
   --flexcyon-bases-padding-horiz: 16px;
   --flexcyon-bases-padding-verti: 16px;
-  --bases-embed-padding: 4px;
   --flexcyon-bases-td-padding-l: 2px;
+  --flexcyon-bases-table-content-alignment: left;
 }
 
 .workspace-leaf-content[data-type="bases"] .view-content {
@@ -19233,8 +19241,11 @@ body {
 }
 
 .bases-table {
-  margin-left: 1px;
   border-right: 0.5px solid var(--text-faint);
+}
+
+.bases-tr {
+  border-left: 0.5px solid var(--text-faint);
 }
 
 .bases-view {
@@ -19360,19 +19371,33 @@ div.bases-cards-cover:not([style*="background-image"]) * {
   margin-left: 8px;
 }
 
-.bases-table-cell {
-  --input-placeholder-color: var(--color-red);
+.bases-table-cell .metadata-input-number,
+.bases-table-cell[data-property-type="number"] {
+  justify-content: var(--flexcyon-bases-table-content-alignment);
 }
 
-.bases-td .metadata-input-number,
-.bases-td[data-property-type="number"] {
-  text-align: left;
-  font-variant-numeric: tabular-nums;
+.bases-table-cell[data-property-type="checkbox"] {
+  justify-content: var(--flexcyon-bases-table-content-alignment);
+}
+
+.bases-table-cell {
+  --input-placeholder-color: var(--color-red);
+  justify-content: var(--flexcyon-bases-table-content-alignment);
+}
+
+.bases-thead .bases-table-header {
+  justify-content: var(--flexcyon-bases-table-content-alignment);
 }
 
 .value-list-container:not(:has(.value-list-element))::before {
   content: "None found";
   color: var(--color-red);
+}
+
+.bases-rendered-value {
+  white-space: normal;
+  overflow: visible;
+  text-overflow: clip;
 }
 
 body {
